--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <section id="navbar">
         <div class="search">
-          <input type="text" class="search-box" />
+          <input type="text" class="search-box" placeholder="Search" />
         </div>
         <div class="navbar-user">
           <div class="notifications">
