improvements in ui and fixed some minor ui bugs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="home active">
             <img src="./assets/img/icon-home.svg" alt="" />
           </div>
-          <div class="settings active">
+          <div class="settings">
             <img src="./assets/img/_ionicons_svg_md-settings.svg" alt="" />
           </div>
         </div>
@@ -25,11 +25,12 @@
 
       <section id="navbar">
         <div class="search">
-          <input type="text" class="search-box" placeholder="Search" />
+          <img src="assets/img/search.svg" alt="" />
+          <input type="text" class="search-box" placeholder="Search...." />
         </div>
         <div class="navbar-user">
           <div class="notifications">
-            <img src="./assets/img/icons8-notification-32.png" alt="" />
+            <img src="./assets/img/bell.svg" alt="" />
           </div>
           <div class="user-details">
             <p class="user-name">Manish</p>
@@ -82,7 +83,7 @@
         </ul>
       </section>
 
-      <section id="body">main-body</section>
+      <section id="body"></section>
 
       <section id="activities">
         <div class="activity-header">
