--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </section>
 
-      <section id="menu">
+      <section class="menu-mob" id="menu">
         <ul class="menu-options">
           <li class="menu-item active">
             <a href="#!" class="menu-link"><span>Overview</span></a>
